--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.0"
 pydantic-settings = "^2.0.3"
 httpx = {extras = ["http2"], version = "^0.25.0"}
 email-validator = "^2.0.0.post2"
+redis = "^5.0.0"
 
 
 [build-system]
