--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pydantic-settings = "^2.0.3"
 httpx = {extras = ["http2"], version = "^0.25.0"}
 email-validator = "^2.0.0.post2"
 redis = "^5.0.0"
+pymongo = "^4.5.0"
 
 
 [build-system]
