--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ redis = "^5.0.0"
 pymongo = "^4.5.0"
 aiogram-pagination = "^0.1.9"
 aiogram-dialog = "^2.0.0"
+babel = "^2.13.0"
 
 
 [build-system]
