--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pymongo = "^4.5.0"
 aiogram-pagination = "^0.1.9"
 aiogram-dialog = "^2.0.0"
 babel = "^2.13.0"
+setuptools = "^68.2.2"
 
 
 [build-system]
